--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:css": "postcss styles/tailwind.css -o styles/index.css"
+    "build:css": "postcss styles/tailwind.css -o styles/index.css -w"
   },
   "keywords": [],
   "author": "",
